--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       background-image: url('https://raw.githubusercontent.com/Cooptroop1/anonmess/main/logo.JPG?sanitize=true');
     }
     .corner-logo {
-      position: fixed;
+      position: absolute;
       top: 10px;
       right: 10px;
       width: 256px;
@@ -63,9 +63,15 @@
       .corner-logo {
         position: absolute;
         top: 10px;
-        right: 10px;
+        left: 50%;
+        transform: translateX(-50%);
         width: 128px;
         height: 128px;
+        z-index: 1000; /* Ensure it stays above chat on mobile */
+      }
+      #chatContainer.in-chat .corner-logo {
+        position: fixed; /* Keep logo fixed above chat box on mobile when in chat */
+        top: 10px;
       }
     }
     .message-bubble {
@@ -97,6 +103,10 @@
       flex-direction: column;
       gap: 0.5rem;
       position: relative;
+    }
+    #chatContainer.in-chat {
+      position: relative;
+      z-index: 0; /* Ensure chat stays below fixed logo on mobile */
     }
     .input-container {
       display: flex;
@@ -600,6 +610,7 @@
         newSessionButton.classList.remove('hidden');
         inputContainer.classList.remove('hidden');
         messages.classList.remove('waiting');
+        chatContainer.classList.add('in-chat'); // Add in-chat class when chat is active
         clearTimeout(connectionTimeouts.get(targetId));
         retryCounts.delete(targetId);
         updateMaxClientsUI();
@@ -663,6 +674,7 @@
         if (dataChannels.size === 0) {
           inputContainer.classList.add('hidden');
           messages.classList.add('waiting');
+          chatContainer.classList.remove('in-chat'); // Remove in-chat class when disconnected
         }
       };
     }
@@ -770,6 +782,7 @@
       if (!isConnected) {
         inputContainer.classList.add('hidden');
         messages.classList.add('waiting');
+        chatContainer.classList.remove('in-chat'); // Remove in-chat class when disconnected
       }
     }
 
@@ -866,6 +879,7 @@
       messages.classList.remove('waiting');
       codeDisplayElement.classList.add('hidden');
       copyCodeButton.classList.add('hidden');
+      chatContainer.classList.remove('in-chat'); // Remove in-chat class when going back
     };
 
     document.getElementById('backButtonConnect').onclick = () => {
@@ -875,6 +889,7 @@
       messages.classList.remove('waiting');
       codeDisplayElement.classList.add('hidden');
       copyCodeButton.classList.add('hidden');
+      chatContainer.classList.remove('in-chat'); // Remove in-chat class when going back
     };
 
     document.getElementById('sendButton').onclick = () => {
@@ -947,6 +962,7 @@
       maxClientsContainer.classList.add('hidden');
       inputContainer.classList.add('hidden');
       messages.classList.remove('waiting');
+      chatContainer.classList.remove('in-chat'); // Remove in-chat class for new session
     };
 
     document.getElementById('usernameInput').addEventListener('keydown', (event) => {
