--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
     #copyCodeButton {
       background-color: #10b981;
       color: white;
-      padding: 0.2rem 0.6rem; /* Reduced padding to make it smaller */
+      padding: 0.15rem 0.4rem; /* Further reduced padding to make it smaller */
       border-radius: 0.375rem;
-      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
       cursor: pointer; /* Ensure pointer cursor for button */
-      float: right; /* Move to the right */
+      float: right; /* Position on the right */
     }
     #copyCodeButton:hover {
       background-color: #059669;
