--- a/index.html
+++ b/index.html
@@ -47,34 +47,23 @@
     #messages.waiting {
       background-color: transparent;
       background-image: url('https://raw.githubusercontent.com/Cooptroop1/anonmess/main/logo.JPG?sanitize=true');
+      background-position: center;
     }
     .corner-logo {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      width: 256px;
-      height: 256px;
-      background-image: url('https://raw.githubusercontent.com/Cooptroop1/anonmess/main/corner%20logo.png?sanitize=true');
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center;
-      z-index: 100;
-      transition: background-image 0.5s ease;
-    }
-    .corner-logo.wink {
-      background-image: url('https://raw.githubusercontent.com/Cooptroop1/anonmess/main/corner%20logoWink.png?sanitize=true');
+      display: none; /* Removed from top right */
     }
     @media (max-width: 640px) {
-      .corner-logo {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        width: 128px;
-        height: 128px;
-        z-index: 100; /* Ensure it stays above but scrolls with page */
-      }
       body {
         padding-top: 180px; /* Increased top padding for mobile to give more space */
+      }
+      #codeDisplay {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      #copyCodeButton {
+        align-self: flex-end;
+        margin-bottom: 0.25rem;
       }
     }
     .message-bubble {
@@ -172,11 +161,11 @@
     #copyCodeButton {
       background-color: #10b981;
       color: white;
-      padding: 0.15rem 0.4rem; /* Further reduced padding to make it smaller */
+      padding: 0.1rem 0.3rem; /* Smaller padding */
       border-radius: 0.375rem;
       margin-bottom: 0.5rem;
       cursor: pointer; /* Ensure pointer cursor for button */
-      float: right; /* Position on the right */
+      float: right; /* Position on the right above code */
     }
     #copyCodeButton:hover {
       background-color: #059669;
@@ -198,8 +187,11 @@
         <button id="startChatButton" class="bg-blue-500 text-white px-4 py-2 rounded w-full hover:bg-blue-600 transition-colors">Start Chat</button>
         <button id="backButton" class="bg-gray-500 text-white px-4 py-2 rounded w-full mt-2 hover:bg-gray-600 transition-colors">Back</button>
       </div>
-      <div id="codeDisplay" class="text-center mb-4 font-mono text-lg text-gray-800 hidden"></div>
-      <button id="copyCodeButton" class="hidden">Copy Code</button>
+      <button id="copyCodeButton" class="hidden"></button> <!-- Moved above codeDisplay -->
+      <div id="codeDisplay" class="text-center mb-4 font-mono text-lg text-gray-800 hidden">
+        <span>Your code: </span>
+        <span id="codeText" class="block mt-1"></span> <!-- Moved code to second line -->
+      </div>
       <div id="chatContainer" class="hidden">
         <button id="newSessionButton" class="bg-red-500 text-white px-4 py-2 rounded w-full mb-4 hover:bg-red-600 transition-colors hidden">New Session</button>
         <div id="messages" class="border border-gray-300 p-4 h-64 overflow-y-auto mb-4 rounded"></div>
@@ -268,6 +260,7 @@
 
     const statusElement = document.getElementById('status');
     const codeDisplayElement = document.getElementById('codeDisplay');
+    const codeTextElement = document.getElementById('codeText');
     const copyCodeButton = document.getElementById('copyCodeButton');
     const initialContainer = document.getElementById('initialContainer');
     const usernameContainer = document.getElementById('usernameContainer');
@@ -827,9 +820,10 @@
       }
       username = usernameInput;
       localStorage.setItem('username', username);
-      codeDisplayElement.textContent = `Your code: ${code}`;
+      codeTextElement.textContent = code; // Set code to second line
       codeDisplayElement.classList.remove('hidden');
       copyCodeButton.classList.remove('hidden');
+      copyCodeButton.textContent = 'Copy Code'; // Ensure button text is set
       usernameContainer.classList.add('hidden');
       connectContainer.classList.add('hidden');
       initialContainer.classList.add('hidden');
@@ -855,9 +849,10 @@
       username = usernameInput;
       localStorage.setItem('username', username);
       code = inputCode;
-      codeDisplayElement.textContent = `Using code: ${code}`;
+      codeTextElement.textContent = code; // Set code to second line
       codeDisplayElement.classList.remove('hidden');
       copyCodeButton.classList.remove('hidden');
+      copyCodeButton.textContent = 'Copy Code'; // Ensure button text is set
       initialContainer.classList.add('hidden');
       usernameContainer.classList.add('hidden');
       connectContainer.classList.add('hidden');
@@ -981,7 +976,7 @@
     });
 
     copyCodeButton.onclick = () => {
-      const codeText = codeDisplayElement.textContent.replace('Your code: ', '').replace('Using code: ', '');
+      const codeText = codeTextElement.textContent; // Use the code text element
       navigator.clipboard.writeText(codeText).then(() => {
         copyCodeButton.textContent = 'Copied!';
         setTimeout(() => {
@@ -1007,6 +1002,13 @@
     document.getElementById('startChatButton').addEventListener('click', () => {
       if (!codeDisplayElement.classList.contains('hidden')) {
         document.querySelector('.bg-white').appendChild(backButtonAfterCode);
+      }
+    });
+
+    // Ensure copy button is placed above code display
+    document.getElementById('startChatButton').addEventListener('click', () => {
+      if (!codeDisplayElement.classList.contains('hidden') && copyCodeButton.parentNode !== codeDisplayElement.parentNode) {
+        codeDisplayElement.parentNode.insertBefore(copyCodeButton, codeDisplayElement);
       }
     });
   </script>
