--- a/index.html
+++ b/index.html
@@ -173,11 +173,10 @@
     #copyCodeButton {
       background-color: #10b981;
       color: white;
-      padding: 0.15rem 0.4rem; /* Further reduced padding to make it smaller */
+      padding: 0.25rem 0.75rem;
       border-radius: 0.375rem;
-      margin-bottom: 0.5rem;
+      margin-top: 0.5rem;
       cursor: pointer; /* Ensure pointer cursor for button */
-      float: right; /* Position on the right */
     }
     #copyCodeButton:hover {
       background-color: #059669;
@@ -992,24 +991,6 @@
         console.error('Failed to copy text: ', err);
       });
     };
-
-    // Add back button functionality after starting a new chat
-    const backButtonAfterCode = document.createElement('button');
-    backButtonAfterCode.textContent = 'Back';
-    backButtonAfterCode.className = 'bg-gray-500 text-white px-4 py-2 rounded w-full mt-2 hover:bg-gray-600 transition-colors';
-    backButtonAfterCode.onclick = () => {
-      codeDisplayElement.classList.add('hidden');
-      copyCodeButton.classList.add('hidden');
-      usernameContainer.classList.remove('hidden');
-      chatContainer.classList.add('hidden');
-      messages.classList.remove('waiting');
-      statusElement.textContent = 'Enter a username to start a chat';
-    };
-    document.getElementById('startChatButton').addEventListener('click', () => {
-      if (!codeDisplayElement.classList.contains('hidden')) {
-        document.querySelector('.bg-white').appendChild(backButtonAfterCode);
-      }
-    });
   </script>
 </body>
 </html>
