--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -175,7 +174,7 @@
       color: white;
       padding: 0.25rem 0.75rem;
       border-radius: 0.375rem;
-      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
       cursor: pointer; /* Ensure pointer cursor for button */
     }
     #copyCodeButton:hover {
@@ -198,8 +197,10 @@
         <button id="startChatButton" class="bg-blue-500 text-white px-4 py-2 rounded w-full hover:bg-blue-600 transition-colors">Start Chat</button>
         <button id="backButton" class="bg-gray-500 text-white px-4 py-2 rounded w-full mt-2 hover:bg-gray-600 transition-colors">Back</button>
       </div>
-      <div id="codeDisplay" class="text-center mb-4 font-mono text-lg text-gray-800 hidden"></div>
-      <button id="copyCodeButton" class="hidden">Copy Code</button>
+      <div id="codeDisplay" class="text-center mb-4 font-mono text-lg text-gray-800 hidden">
+        <button id="copyCodeButton" class="hidden">Copy Code</button>
+        <span id="codeText"></span>
+      </div>
       <div id="chatContainer" class="hidden">
         <button id="newSessionButton" class="bg-red-500 text-white px-4 py-2 rounded w-full mb-4 hover:bg-red-600 transition-colors hidden">New Session</button>
         <div id="messages" class="border border-gray-300 p-4 h-64 overflow-y-auto mb-4 rounded"></div>
@@ -268,6 +269,7 @@
 
     const statusElement = document.getElementById('status');
     const codeDisplayElement = document.getElementById('codeDisplay');
+    const codeTextElement = document.getElementById('codeText');
     const copyCodeButton = document.getElementById('copyCodeButton');
     const initialContainer = document.getElementById('initialContainer');
     const usernameContainer = document.getElementById('usernameContainer');
@@ -827,7 +829,7 @@
       }
       username = usernameInput;
       localStorage.setItem('username', username);
-      codeDisplayElement.textContent = `Your code: ${code}`;
+      codeTextElement.textContent = `Your code: ${code}`;
       codeDisplayElement.classList.remove('hidden');
       copyCodeButton.classList.remove('hidden');
       usernameContainer.classList.add('hidden');
@@ -855,7 +857,7 @@
       username = usernameInput;
       localStorage.setItem('username', username);
       code = inputCode;
-      codeDisplayElement.textContent = `Using code: ${code}`;
+      codeTextElement.textContent = `Using code: ${code}`;
       codeDisplayElement.classList.remove('hidden');
       copyCodeButton.classList.remove('hidden');
       initialContainer.classList.add('hidden');
@@ -939,7 +941,6 @@
       maxClients = 2;
       totalClients = 0;
       code = generateCode();
-      codeDisplayElement.textContent = '';
       codeDisplayElement.classList.add('hidden');
       copyCodeButton.classList.add('hidden');
       statusElement.textContent = 'Start a new chat or connect to an existing one';
@@ -981,7 +982,7 @@
     });
 
     copyCodeButton.onclick = () => {
-      const codeText = codeDisplayElement.textContent.replace('Your code: ', '').replace('Using code: ', '');
+      const codeText = codeTextElement.textContent.replace('Your code: ', '').replace('Using code: ', '');
       navigator.clipboard.writeText(codeText).then(() => {
         copyCodeButton.textContent = 'Copied!';
         setTimeout(() => {
