--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -66,17 +64,49 @@
     .corner-logo.wink {
       background-image: url('https://raw.githubusercontent.com/Cooptroop1/anonmess/main/corner%20logoWink.png?sanitize=true');
     }
+    #newSessionButton {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      width: 256px;
+      height: 256px;
+      background-color: #ef4444;
+      color: white;
+      border: none;
+      border-radius: 10%;
+      font-size: 1.5rem;
+      font-weight: bold;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      transition: background-color 0.2s ease;
+      display: none; /* Hidden by default, shown only when connected */
+    }
+    #chatContainer #newSessionButton {
+      display: flex; /* Show only when chatContainer is active and connected */
+    }
+    #newSessionButton:hover {
+      background-color: #dc2626;
+    }
     @media (max-width: 640px) {
       .corner-logo {
-        position: absolute;
         top: 10px;
         right: 10px;
         width: 128px;
         height: 128px;
-        z-index: 100; /* Ensure it stays above but scrolls with page */
+        z-index: 100;
       }
       body {
-        padding-top: 180px; /* Increased top padding for mobile to give more space */
+        padding-top: 180px;
+      }
+      #newSessionButton {
+        top: 10px;
+        left: 10px;
+        width: 128px;
+        height: 128px;
+        font-size: 1rem;
+        border-radius: 10%;
       }
     }
     .message-bubble {
@@ -177,7 +207,7 @@
       padding: 0.25rem 0.75rem;
       border-radius: 0.375rem;
       margin-top: 0.5rem;
-      cursor: pointer; /* Ensure pointer cursor for button */
+      cursor: pointer;
     }
     #copyCodeButton:hover {
       background-color: #059669;
@@ -185,6 +215,7 @@
   </style>
 </head>
 <body class="bg-black min-h-screen flex items-center justify-center">
+  <button id="newSessionButton" class="hidden">New Session</button>
   <div class="corner-logo" id="cornerLogo"></div>
   <div class="flex w-full max-w-lg">
     <div class="bg-white p-8 rounded-lg shadow-lg flex-grow">
@@ -202,7 +233,6 @@
       <div id="codeDisplay" class="text-center mb-4 font-mono text-lg text-gray-800 hidden"></div>
       <button id="copyCodeButton" class="hidden">Copy Code</button>
       <div id="chatContainer" class="hidden">
-        <button id="newSessionButton" class="bg-red-500 text-white px-4 py-2 rounded w-full mb-4 hover:bg-red-600 transition-colors hidden">New Session</button>
         <div id="messages" class="border border-gray-300 p-4 h-64 overflow-y-auto mb-4 rounded"></div>
         <div class="input-container hidden">
           <textarea id="messageInput" placeholder="Type a message..." cols="30" maxlength="1000"></textarea>
@@ -674,6 +704,7 @@
         if (dataChannels.size === 0) {
           inputContainer.classList.add('hidden');
           messages.classList.add('waiting');
+          newSessionButton.classList.add('hidden'); // Hide when disconnected
         }
       };
     }
@@ -781,6 +812,7 @@
       if (!isConnected) {
         inputContainer.classList.add('hidden');
         messages.classList.add('waiting');
+        newSessionButton.classList.add('hidden'); // Hide when disconnected
       }
     }
 
