--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,21 +13,21 @@
     /* Global cursor and selection style: no pointer or caret on non-inputs */
     * {
       cursor: default;
-      user-select: none;
+      user-select: none; /* Prevents text selection and caret */
     }
     input[type="text"],
     input[type="number"],
     textarea {
       cursor: text;
-      user-select: text;
+      user-select: text; /* Allows selection and caret in inputs */
     }
     #codeDisplay {
-      user-select: text;
+      user-select: text; /* Allows copying the code text */
     }
 
     body {
       min-height: 100vh;
-      padding-top: 150px;
+      padding-top: 150px; /* Increased top padding to create more space above white box */
     }
 
     #messages {
@@ -64,49 +67,17 @@
     .corner-logo.wink {
       background-image: url('https://raw.githubusercontent.com/Cooptroop1/anonmess/main/corner%20logoWink.png?sanitize=true');
     }
-    #newSessionButton {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      width: 256px;
-      height: 256px;
-      background-color: #ef4444;
-      color: white;
-      border: none;
-      border-radius: 10%;
-      font-size: 1.5rem;
-      font-weight: bold;
-      display: none;
-      align-items: center;
-      justify-content: center;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      transition: background-color 0.2s ease;
-      z-index: 100;
-    }
-    #chatContainer #newSessionButton {
-      display: flex;
-    }
-    #newSessionButton:hover {
-      background-color: #dc2626;
-    }
     @media (max-width: 640px) {
       .corner-logo {
+        position: absolute;
         top: 10px;
         right: 10px;
         width: 128px;
         height: 128px;
-        z-index: 100;
+        z-index: 100; /* Ensure it stays above but scrolls with page */
       }
       body {
-        padding-top: 180px;
-      }
-      #newSessionButton {
-        top: 10px;
-        left: 10px;
-        width: 128px;
-        height: 128px;
-        font-size: 1rem;
-        border-radius: 10%;
+        padding-top: 180px; /* Increased top padding for mobile to give more space */
       }
     }
     .message-bubble {
@@ -207,7 +178,7 @@
       padding: 0.25rem 0.75rem;
       border-radius: 0.375rem;
       margin-top: 0.5rem;
-      cursor: pointer;
+      cursor: pointer; /* Ensure pointer cursor for button */
     }
     #copyCodeButton:hover {
       background-color: #059669;
@@ -232,7 +203,7 @@
       <div id="codeDisplay" class="text-center mb-4 font-mono text-lg text-gray-800 hidden"></div>
       <button id="copyCodeButton" class="hidden">Copy Code</button>
       <div id="chatContainer" class="hidden">
-        <button id="newSessionButton">New Session</button>
+        <button id="newSessionButton" class="bg-red-500 text-white px-4 py-2 rounded w-full mb-4 hover:bg-red-600 transition-colors hidden">New Session</button>
         <div id="messages" class="border border-gray-300 p-4 h-64 overflow-y-auto mb-4 rounded"></div>
         <div class="input-container hidden">
           <textarea id="messageInput" placeholder="Type a message..." cols="30" maxlength="1000"></textarea>
@@ -320,10 +291,11 @@
       cornerLogo.classList.add('wink');
       cycleTimeout = setTimeout(() => {
         cornerLogo.classList.remove('wink');
-      }, 500);
-      setTimeout(() => triggerCycle(), 60000);
+      }, 500); // 0.5 seconds for wink
+      setTimeout(() => triggerCycle(), 60000); // Repeat every 60 seconds
     }
-    setTimeout(() => triggerCycle(), 60000);
+    setTimeout(() => triggerCycle(), 60000); // Start first wink after 60 seconds
+    // Initial state is normal logo, no wink on load
 
     const socket = new WebSocket('wss://signaling-server-zc6m.onrender.com');
     console.log('WebSocket created');
@@ -486,10 +458,8 @@
       maxClientsContainer.classList.toggle('hidden', !isInitiator);
       if (!isConnected) {
         messages.classList.add('waiting');
-        newSessionButton.style.display = 'none';
       } else {
         messages.classList.remove('waiting');
-        newSessionButton.style.display = 'flex';
       }
     }
 
@@ -639,6 +609,7 @@
         usernameContainer.classList.add('hidden');
         connectContainer.classList.add('hidden');
         chatContainer.classList.remove('hidden');
+        newSessionButton.classList.remove('hidden');
         inputContainer.classList.remove('hidden');
         messages.classList.remove('waiting');
         clearTimeout(connectionTimeouts.get(targetId));
@@ -704,7 +675,6 @@
         if (dataChannels.size === 0) {
           inputContainer.classList.add('hidden');
           messages.classList.add('waiting');
-          newSessionButton.style.display = 'none';
         }
       };
     }
@@ -812,7 +782,6 @@
       if (!isConnected) {
         inputContainer.classList.add('hidden');
         messages.classList.add('waiting');
-        newSessionButton.style.display = 'none';
       }
     }
 
@@ -986,7 +955,7 @@
       usernameContainer.classList.add('hidden');
       connectContainer.classList.add('hidden');
       chatContainer.classList.add('hidden');
-      newSessionButton.style.display = 'none';
+      newSessionButton.classList.add('hidden');
       maxClientsContainer.classList.add('hidden');
       inputContainer.classList.add('hidden');
       messages.classList.remove('waiting');
