--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -389,8 +388,7 @@
           usernames.delete(message.clientId);
           cleanupPeerConnection(message.clientId);
           updateMaxClientsUI();
-          if (totalClients <= 1 && isConnected) {
-            messages.innerHTML = ''; // Clear chat when only one connection remains
+          if (totalClients <= 1) {
             inputContainer.classList.add('hidden');
             messages.classList.add('waiting');
           }
@@ -781,7 +779,6 @@
       if (!isConnected) {
         inputContainer.classList.add('hidden');
         messages.classList.add('waiting');
-        messages.innerHTML = ''; // Clear chat on connection lost
       }
     }
 
