new working defo with colours

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     body {
       min-height: 100vh;
       padding-top: 150px; /* Increased top padding to create more space above white box */
-      background-color: #000000; /* Note: Background black */
+      /* Note: Background black */
     }
 
     #messages {
@@ -180,17 +180,6 @@
     }
     #copyCodeButton:hover {
       background-color: #059669;
-    }
-    #newSessionButton {
-      background-color: #ef4444; /* Note: New session button red */
-      color: white;
-      padding: 0.25rem 2rem; /* Original padding */
-      border-radius: 0.375rem;
-      margin-top: 0.5rem;
-      cursor: pointer; /* Ensure pointer cursor for button */
-    }
-    #newSessionButton:hover {
-      background-color: #dc2626;
     }
   </style>
 </head>
