--- a/index.html
+++ b/index.html
@@ -175,7 +175,9 @@
       padding: 0.25rem 0.75rem;
       border-radius: 0.375rem;
       margin-top: 0.5rem;
+      margin-bottom: 0.1rem;
       cursor: pointer; /* Ensure pointer cursor for button */
+      width: 50%; /* Adds 50% width */
     }
     #copyCodeButton:hover {
       background-color: #059669;
@@ -200,7 +202,7 @@
       <div id="codeDisplay" class="text-center mb-4 font-mono text-lg text-gray-800 hidden"></div>
       <button id="copyCodeButton" class="hidden">Copy Code</button>
       <div id="chatContainer" class="hidden">
-        <button id="newSessionButton" class="bg-red-500 text-white px-4 py-2 rounded w-1/2 mb-4 hover:bg-red-600 transition-colors hidden">New Session</button>
+        <button id="newSessionButton" class="bg-red-500 text-white px-4 py-2 rounded w-1/3 mb-4 hover:bg-red-600 transition-colors hidden">New Session</button>
         <div id="messages" class="border border-gray-300 p-4 h-64 overflow-y-auto mb-4 rounded"></div>
         <div class="input-container hidden">
           <textarea id="messageInput" placeholder="Type a message..." cols="30" maxlength="1000"></textarea>
