--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       border-radius: 0.5rem;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       position: relative;
-      height: 356px;
+      height: 256px;
       background-color: #fce7f3;
       background-image: none;
       background-size: 100% 100%;
@@ -143,6 +143,7 @@
         padding: 0.5rem 0.75rem;
       }
       .input-container {
+        height: 356px; /* Mobile-specific height */
         padding: 0 0.5rem;
       }
     }
