--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       border-bottom-right-radius: 0.25rem;
     }
     .message-bubble.other {
-      background-color: #e5e7eb;
+      background-color: #10b981;
       color: #1f2937;
       margin-right: auto;
       border-bottom-left-radius: 0.25rem;
@@ -128,7 +128,7 @@
       max-height: 12.5rem;
       line-height: 1.5rem;
       width: 110%;
-      max-width: 100%;
+      max-width: 110%;
       background-color: #3b82f6;
       color: white;
       border-radius: 1rem;
