--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     }
     .message-bubble.other {
       background-color: #10b981;
-      color: #1f2937;
+      color: white;
       margin-right: auto;
       border-bottom-left-radius: 0.25rem;
     }
