--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       display: flex;
       align-items: flex-start;
       gap: 0.5rem;
-      padding: 0 1rem;
+      padding: 0 2rem;    /* Changed from 0 1rem to 0 2rem to match p-8 padding */
       position: absolute;
       bottom: -3rem;
       width: 100%;
@@ -127,8 +127,8 @@
       height: 2.5rem;
       max-height: 12.5rem;
       line-height: 1.5rem;
-      width: 110%;
-      max-width: 110%;
+      width: 100%;        /* Changed from 110% to 100% to match container width */
+      max-width: 100%;    /* Changed from 110% to 100% to match container width */
       background-color: #3b82f6;
       color: white;
       border-radius: 1rem;
