--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       display: flex;
       align-items: flex-start;
       gap: 0.5rem;
-      padding: 0 2rem;    /* Changed from 0 1rem to 0 2rem to match p-8 padding */
+      padding: 0 0rem;    /* Changed from 0 1rem to 0 2rem to match p-8 padding */
       position: absolute;
       bottom: -3rem;
       width: 100%;
@@ -132,7 +132,7 @@
       background-color: #3b82f6;
       color: white;
       border-radius: 1rem;
-      padding: 0.5rem 1rem;
+      padding: 0.5rem 1rem; /* Keep padding to match #messages internal spacing */
       border: none;
       box-sizing: border-box;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
